  \itemize{
    \item Fix to ensure that \code{r} attribute in radial gradients
    is non-negative.
    
    \item Fix for strict attribute checking now includes presentation
    attributes.
    
    \item Fix for \pkg{gtable} support when grob in table cell has
    viewport with non-centering alignment (e.g., a \pkg{ggplot2}
    plot with more than one legend).  Reported by Tauno Metsalu.
  }
}
\section{Changes in version 1.5-0}{
  \itemize{
    \item Added \code{strict} argument for \code{grid.export()}
    and \code{gridsvg()} to allow control over whether SVG attributes
    are checked for validity.

    \item Added \code{rootAttrs} argument for \code{grid.export()}
    and \code{gridsvg()} to allow control over attributes of
    top-level \code{<svg>} element.  Suggestion and original patch
    from Thell Fowler.
  }
}
\section{Changes in version 1.4-4}{
  \itemize{
    \item Fixed bug where \code{gpar(col=c(foo="red"))} would not work
    (the name \code{foo} is now stripped).  Reported by Simon Anders.

    \item Fixed bug in feColorMatrix().  The color matrix required
    transposing before export to SVG.

    \item Fixed bug in feComponentTransfer().  Was generating an
    feColorMatrix element \emph{and} was inlining transfer functions
    as attributes (rather than generating feFunc elements as children).

    \item Added support for NA values in locations and dimensions
    of graphical primitives.
  }
}
\section{Changes in version 1.4-3}{
  \itemize{
    \item Non-SVG style attributes are now \emph{removed} (with a
    warning) and this is done \emph{before} checking attributes for
    length equal to 1.

    This was in response to a problem reported by Wolfgang Huber.

    \item Fix evaluation of arguments when using the 'gridsvg' device.
    These were not being evaluated before being passed to 'grid.export'.

    Also reported by Wolfgang Huber.
  }
}
\section{Changes in version 1.4-2}{
  \itemize{